--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-extensions = "^3.2.1"
 ipython = "^8.8.0"
 dj-database-url = "^1.2.0"
 djangorestframework = "^3.14.0"
+black = "^22.12.0"
 
 
 [build-system]
