--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ipython = "^8.8.0"
 dj-database-url = "^1.2.0"
 djangorestframework = "^3.14.0"
 black = "^22.12.0"
+mypy = "^0.991"
 
 
 [build-system]
