--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ djangorestframework = "^3.14.0"
 black = "^22.12.0"
 mypy = "^0.991"
 djangorestframework-simplejwt = "^5.2.2"
+django-filter = "^22.1"
 
 
 [build-system]
